# meeting-debt-collector

./: .gitignore  LICENSE  README.md
.claude/: CLAUDE.md
.claude/commands/: unvendor-bolt.md  vendor-bolt.md
.slack/: config.json
docs/: PROJECT_EXPLAINED.md  SPEC.md  SUBMISSION_CHECKLIST.md  VIDEO_SCRIPT.md
pydantic-ai/: .env.sample  .gitignore  README.md  app.py  app_oauth.py  fly.toml  manifest.json  pyproject.toml  requirements.txt  validate_extractor.py
pydantic-ai/.claude/: CLAUDE.md
pydantic-ai/.slack/: config.json
pydantic-ai/agent/: __init__.py  agent.py  deps.py  scheduler.py  store.py
pydantic-ai/agent/tools/: __init__.py  build_digest.py  check_pr_status.py  emoji_reaction.py  extract_commitment.py  rts_query.py
pydantic-ai/listeners/: __init__.py
pydantic-ai/listeners/actions/: __init__.py  feedback_buttons.py
pydantic-ai/listeners/events/: __init__.py  app_home_opened.py  app_mentioned.py  message.py
pydantic-ai/listeners/views/: __init__.py  app_home_builder.py  feedback_builder.py
pydantic-ai/tests/: test_app_home_opened.py  test_view_builders.py
pydantic-ai/thread_context/: __init__.py  store.py
